o patch by Michael V. Denisenko to handle case <string> of (see also #13700)   + compiler implementation   + tests
git-svn-id: trunk@13642 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8079,7 +8079,57 @@ tests/test/tasout.pp svneol=native#text/plain
 tests/test/tbopr.pp svneol=native#text/plain
 tests/test/tbrtlevt.pp svneol=native#text/plain
 tests/test/tcase1.pp svneol=native#text/plain
+tests/test/tcase10.pp svneol=native#text/pascal
+tests/test/tcase11.pp svneol=native#text/pascal
+tests/test/tcase12.pp svneol=native#text/pascal
+tests/test/tcase13.pp svneol=native#text/pascal
+tests/test/tcase14.pp svneol=native#text/pascal
+tests/test/tcase15.pp svneol=native#text/pascal
+tests/test/tcase16.pp svneol=native#text/pascal
+tests/test/tcase17.pp svneol=native#text/pascal
+tests/test/tcase18.pp svneol=native#text/pascal
+tests/test/tcase19.pp svneol=native#text/pascal
 tests/test/tcase2.pp svneol=native#text/plain
+tests/test/tcase20.pp svneol=native#text/pascal
+tests/test/tcase21.pp svneol=native#text/pascal
+tests/test/tcase22.pp svneol=native#text/pascal
+tests/test/tcase23.pp svneol=native#text/pascal
+tests/test/tcase24.pp svneol=native#text/pascal
+tests/test/tcase25.pp svneol=native#text/pascal
+tests/test/tcase26.pp svneol=native#text/pascal
+tests/test/tcase27.pp svneol=native#text/pascal
+tests/test/tcase28.pp svneol=native#text/pascal
+tests/test/tcase29.pp svneol=native#text/pascal
+tests/test/tcase3.pp svneol=native#text/pascal
+tests/test/tcase30.pp svneol=native#text/pascal
+tests/test/tcase31.pp svneol=native#text/pascal
+tests/test/tcase32.pp svneol=native#text/pascal
+tests/test/tcase33.pp svneol=native#text/pascal
+tests/test/tcase34.pp svneol=native#text/pascal
+tests/test/tcase35.pp svneol=native#text/pascal
+tests/test/tcase36.pp svneol=native#text/pascal
+tests/test/tcase37.pp svneol=native#text/pascal
+tests/test/tcase38.pp svneol=native#text/pascal
+tests/test/tcase39.pp svneol=native#text/pascal
+tests/test/tcase4.pp svneol=native#text/pascal
+tests/test/tcase40.pp svneol=native#text/pascal
+tests/test/tcase41.pp svneol=native#text/pascal
+tests/test/tcase42.pp svneol=native#text/pascal
+tests/test/tcase43.pp svneol=native#text/pascal
+tests/test/tcase44.pp svneol=native#text/pascal
+tests/test/tcase45.pp svneol=native#text/pascal
+tests/test/tcase45_2.pp svneol=native#text/pascal
+tests/test/tcase46.pp svneol=native#text/pascal
+tests/test/tcase46_2.pp svneol=native#text/pascal
+tests/test/tcase47.pp svneol=native#text/pascal
+tests/test/tcase47_2.pp svneol=native#text/pascal
+tests/test/tcase48.pp svneol=native#text/pascal
+tests/test/tcase48_2.pp svneol=native#text/pascal
+tests/test/tcase5.pp svneol=native#text/pascal
+tests/test/tcase6.pp svneol=native#text/pascal
+tests/test/tcase7.pp svneol=native#text/pascal
+tests/test/tcase8.pp svneol=native#text/pascal
+tests/test/tcase9.pp svneol=native#text/pascal
 tests/test/tcg1.pp svneol=native#text/plain
 tests/test/tcint64.pp svneol=native#text/plain
 tests/test/tclass1.pp svneol=native#text/plain
