* fixed fpsignal for linux/x86_64 and possibly some other platforms as well     (patch by Nikolay Nikolov, mantis #14514)
git-svn-id: trunk@13666 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9285,6 +9285,7 @@ tests/webtbs/tw14418.pp svneol=native#text/plain
 tests/webtbs/tw1445.pp svneol=native#text/plain
 tests/webtbs/tw1450.pp svneol=native#text/plain
 tests/webtbs/tw1451.pp svneol=native#text/plain
+tests/webtbs/tw14514.pp svneol=native#text/plain
 tests/webtbs/tw1470.pp svneol=native#text/plain
 tests/webtbs/tw1472.pp svneol=native#text/plain
 tests/webtbs/tw1477.pp svneol=native#text/plain
