* GMP initial version.
git-svn-id: trunk@13667 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -1814,6 +1814,22 @@ packages/ggi/fpmake.pp svneol=native#text/plain
 packages/ggi/src/ggi.pp svneol=native#text/plain
 packages/ggi/src/ggi2d.pp svneol=native#text/plain
 packages/ggi/src/gii.pp svneol=native#text/plain
+packages/gmp/Makefile svneol=native#text/plain
+packages/gmp/Makefile.fpc svneol=native#text/plain
+packages/gmp/examples/Makefile svneol=native#text/plain
+packages/gmp/examples/Makefile.fpc svneol=native#text/plain
+packages/gmp/examples/gmp_accept_test.pas svneol=native#text/plain
+packages/gmp/examples/gmp_test_impl.inc svneol=native#text/plain
+packages/gmp/examples/gmp_test_intf.inc svneol=native#text/plain
+packages/gmp/examples/gmp_testcase.pas svneol=native#text/plain
+packages/gmp/examples/pidigits_example.pas svneol=native#text/plain
+packages/gmp/examples/pidigits_example2.pas svneol=native#text/plain
+packages/gmp/examples/printf_example.pas svneol=native#text/plain
+packages/gmp/examples/printf_example2.pas svneol=native#text/plain
+packages/gmp/examples/scanf_example.pas svneol=native#text/plain
+packages/gmp/examples/scanf_example2.pas svneol=native#text/plain
+packages/gmp/readme svneol=native#text/plain
+packages/gmp/src/gmp.pas svneol=native#text/plain
 packages/gnome1/Makefile svneol=native#text/plain
 packages/gnome1/Makefile.fpc svneol=native#text/plain
 packages/gnome1/examples/gconfcallback1.pp svneol=native#text/plain
