+ tests forgotten to commit earlier
git-svn-id: branches/objc@13678 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8221,6 +8221,8 @@ tests/test/tobjc10.pp svneol=native#text/plain
 tests/test/tobjc11.pp svneol=native#text/plain
 tests/test/tobjc12.pp svneol=native#text/plain
 tests/test/tobjc13.pp svneol=native#text/plain
+tests/test/tobjc13a.pp svneol=native#text/plain
+tests/test/tobjc13b.pp svneol=native#text/plain
 tests/test/tobjc14.pp svneol=native#text/plain
 tests/test/tobjc15.pp svneol=native#text/plain
 tests/test/tobjc16.pp svneol=native#text/plain
