--- a/.gitattributes
+++ b/.gitattributes
@@ -8227,6 +8227,7 @@ tests/test/tobjc14.pp svneol=native#text/plain
 tests/test/tobjc15.pp svneol=native#text/plain
 tests/test/tobjc16.pp svneol=native#text/plain
 tests/test/tobjc17.pp svneol=native#text/plain
+tests/test/tobjc18.pp svneol=native#text/plain
 tests/test/tobjc2.pp svneol=native#text/plain
 tests/test/tobjc3.pp svneol=native#text/plain
 tests/test/tobjc4.pp svneol=native#text/plain
