--- a/.gitattributes
+++ b/.gitattributes
@@ -8526,6 +8526,7 @@ tests/test/tobjc15.pp svneol=native#text/plain
 tests/test/tobjc16.pp svneol=native#text/plain
 tests/test/tobjc17.pp svneol=native#text/plain
 tests/test/tobjc18.pp svneol=native#text/plain
+tests/test/tobjc19.pp svneol=native#text/plain
 tests/test/tobjc2.pp svneol=native#text/plain
 tests/test/tobjc3.pp svneol=native#text/plain
 tests/test/tobjc4.pp svneol=native#text/plain
