* make hidden '_cmd' (selector) parameter available in Objective-C methods   * don't give a hint if this hidden _cmd parameter is unused
git-svn-id: branches/objc@13700 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8597,6 +8597,7 @@ tests/test/tobjc18.pp svneol=native#text/plain
 tests/test/tobjc19.pp svneol=native#text/plain
 tests/test/tobjc2.pp svneol=native#text/plain
 tests/test/tobjc20.pp svneol=native#text/plain
+tests/test/tobjc21.pp svneol=native#text/plain
 tests/test/tobjc3.pp svneol=native#text/plain
 tests/test/tobjc4.pp svneol=native#text/plain
 tests/test/tobjc4a.pp svneol=native#text/plain
