--- Merging r13526 into '.': U    tests/tbs/tb0524.pp --- Merging r13529 into '.': G    tests/tbs/tb0524.pp Skipped missing target: 'utils/simulator' --- Merging r13554 into '.': U    rtl/x86_64/x86_64.inc --- Merging r13563 into '.': U    rtl/unix/ipc.pp U    rtl/unix/sockets.pp U    rtl/linux/arm/sysnr.inc U    rtl/linux/osdefs.inc U    rtl/linux/unixsock.inc U    rtl/linux/bunxsysc.inc U    rtl/linux/ossysc.inc U    rtl/linux/system.pp --- Merging r13565 into '.': U    tests/Makefile.fpc U    tests/Makefile --- Merging r13574 through r13580 into '.': U    rtl/inc/real2str.inc A    tests/webtbs/tw14230.pp U    compiler/dbgdwarf.pas U    compiler/nmem.pas U    compiler/pexpr.pas U    compiler/finput.pas U    compiler/ncal.pas U    compiler/scanner.pas U    compiler/ncnv.pas U    compiler/pass_1.pas --- Merging r13584 into '.': A    tests/test/packages/webtbs/tw14265.pp U    compiler/systems/t_linux.pas --- Merging r13587 through r13589 into '.': U    utils/fppkg/Makefile.fpc A    utils/fppkg/buildfppkg.pp U    utils/fppkg/Makefile G    compiler/systems/t_linux.pas --- Merging r13600 into '.': U    compiler/systems/t_bsd.pas --- Merging r13640 into '.': U    compiler/options.pas --- Merging r13643 into '.': U    packages/Makefile U    packages/fcl-image/Makefile.fpc U    packages/fcl-image/Makefile U    packages/Makefile.fpc U    packages/cairo/Makefile.fpc U    packages/cairo/Makefile --- Merging r13645 into '.': G    compiler/systems/t_bsd.pas --- Merging r13647 into '.': U    compiler/pdecsub.pas --- Merging r13650 into '.': U    compiler/cresstr.pas --- Merging r13653 into '.': G    compiler/systems/t_bsd.pas --- Merging r13657 through r13658 into '.': G    compiler/systems/t_bsd.pas --- Merging r13665 through r13666 into '.': U    rtl/unix/bunxovl.inc A    tests/webtbs/tw14514.pp U    compiler/msgtxt.inc U    compiler/msgidx.inc U    compiler/msg/errore.msg G    compiler/options.pas --- Merging r13674 through r13680 into '.': G    compiler/dbgdwarf.pas U    pac

--- a/.gitattributes
+++ b/.gitattributes
@@ -8048,6 +8048,7 @@ tests/test/packages/webtbs/tw10045.pp svneol=native#text/plain
 tests/test/packages/webtbs/tw11142.pp svneol=native#text/plain
 tests/test/packages/webtbs/tw11570.pp svneol=native#text/plain
 tests/test/packages/webtbs/tw12830.pp svneol=native#text/plain
+tests/test/packages/webtbs/tw14265.pp svneol=native#text/plain
 tests/test/packages/webtbs/tw1808.pp svneol=native#text/plain
 tests/test/packages/webtbs/tw3820.pp svneol=native#text/plain
 tests/test/packages/win-base/tdispvar1.pp svneol=native#text/plain
@@ -9214,6 +9215,7 @@ tests/webtbs/tw14149.pp svneol=native#text/plain
 tests/webtbs/tw14155.pp svneol=native#text/plain
 tests/webtbs/tw1416.pp svneol=native#text/plain
 tests/webtbs/tw14174.pp svneol=native#text/plain
+tests/webtbs/tw14230.pp svneol=native#text/plain
 tests/webtbs/tw14236.pp svneol=native#text/plain
 tests/webtbs/tw1430.pp svneol=native#text/plain
 tests/webtbs/tw14307.pp svneol=native#text/plain
@@ -9223,6 +9225,8 @@ tests/webtbs/tw14403.pp svneol=native#text/plain
 tests/webtbs/tw1445.pp svneol=native#text/plain
 tests/webtbs/tw1450.pp svneol=native#text/plain
 tests/webtbs/tw1451.pp svneol=native#text/plain
+tests/webtbs/tw14514.pp svneol=native#text/plain
+tests/webtbs/tw14536.pp svneol=native#text/plain
 tests/webtbs/tw1470.pp svneol=native#text/plain
 tests/webtbs/tw1472.pp svneol=native#text/plain
 tests/webtbs/tw1477.pp svneol=native#text/plain
@@ -10290,6 +10294,7 @@ utils/fpmc/test.mc -text
 utils/fppkg/Makefile svneol=native#text/plain
 utils/fppkg/Makefile.fpc svneol=native#text/plain
 utils/fppkg/README.txt svneol=native#text/plain
+utils/fppkg/buildfppkg.pp svneol=native#text/plain
 utils/fppkg/examples/pkglibcurl.pp svneol=native#text/plain
 utils/fppkg/examples/pkgocurl.pp svneol=native#text/plain
 utils/fppkg/examples/pkgsynapse.pp svneol=native#text/plain
