--- a/.gitattributes
+++ b/.gitattributes
@@ -6095,8 +6095,10 @@ rtl/inc/mmatimp.inc svneol=native#text/plain
 rtl/inc/mouse.inc svneol=native#text/plain
 rtl/inc/mouseh.inc svneol=native#text/plain
 rtl/inc/mvecimp.inc svneol=native#text/plain
-rtl/inc/objc1.pp svneol=native#text/plain
+rtl/inc/objc.pp svneol=native#text/plain
+rtl/inc/objc1.inc svneol=native#text/plain
 rtl/inc/objcbase.pp svneol=native#text/plain
+rtl/inc/objcnf.inc svneol=native#text/plain
 rtl/inc/objects.pp svneol=native#text/plain
 rtl/inc/objpas.inc svneol=native#text/plain
 rtl/inc/objpash.inc svneol=native#text/plain
