+ support for exporting Objective-C classes from dynamic libraries. It works     the same as for exporting functions/procedures and variables: add the name     of the class to the "exports" section of the library. By default, classes     are only visible inside a shared library.
git-svn-id: branches/objc@13765 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8628,6 +8628,10 @@ tests/test/tobjc8a.pp svneol=native#text/plain
 tests/test/tobjc9.pp svneol=native#text/plain
 tests/test/tobjc9a.pp svneol=native#text/plain
 tests/test/tobjc9b.pp svneol=native#text/plain
+tests/test/tobjcl1.pp svneol=native#text/plain
+tests/test/tobjcl2.pp svneol=native#text/plain
+tests/test/tobjcl3.pp svneol=native#text/plain
+tests/test/tobjcl4.pp svneol=native#text/plain
 tests/test/tobject1.pp svneol=native#text/plain
 tests/test/tobject2.pp svneol=native#text/plain
 tests/test/tobject3.pp svneol=native#text/plain
@@ -8940,6 +8944,7 @@ tests/test/units/sysutils/tfloattostr.pp svneol=native#text/plain
 tests/test/units/sysutils/tlocale.pp svneol=native#text/plain
 tests/test/units/sysutils/tsscanf.pp svneol=native#text/plain
 tests/test/units/sysutils/tstrtobool.pp svneol=native#text/plain
+tests/test/uobjcl1.pp svneol=native#text/plain
 tests/test/uprec6.pp svneol=native#text/plain
 tests/test/uprec7.pp svneol=native#text/plain
 tests/test/uprocext1.pp svneol=native#text/plain
