* fixed checking whether first character of a selector is valid (patch by     Dmitry Boyarintsev, mantis #14680)
git-svn-id: branches/objc@13768 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8613,6 +8613,7 @@ tests/test/tobjc2.pp svneol=native#text/plain
 tests/test/tobjc20.pp svneol=native#text/plain
 tests/test/tobjc21.pp svneol=native#text/plain
 tests/test/tobjc22.pp svneol=native#text/plain
+tests/test/tobjc23.pp svneol=native#text/plain
 tests/test/tobjc3.pp svneol=native#text/plain
 tests/test/tobjc4.pp svneol=native#text/plain
 tests/test/tobjc4a.pp svneol=native#text/plain
