* don't allow properties to expose private fields of parent classes     (mantis #14650)
git-svn-id: trunk@13794 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8711,6 +8711,8 @@ tests/webtbf/tw14104b.pp svneol=native#text/plain
 tests/webtbf/tw14104c.pp svneol=native#text/plain
 tests/webtbf/tw14248.pp svneol=native#text/plain
 tests/webtbf/tw1432.pp svneol=native#text/plain
+tests/webtbf/tw14650.pp svneol=native#text/plain
+tests/webtbf/tw14650a.pp svneol=native#text/plain
 tests/webtbf/tw1467.pp svneol=native#text/plain
 tests/webtbf/tw1483.pp svneol=native#text/plain
 tests/webtbf/tw1599.pp svneol=native#text/plain
