Updated Russian message file, and changed cp1251 encoding to UTF-8.
git-svn-id: trunk@13814 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -269,7 +269,7 @@ compiler/msg/errorpli.msg svneol=native#text/plain
 compiler/msg/errorptd.msg svneol=native#text/plain
 compiler/msg/errorptw.msg svneol=native#text/plain
 compiler/msg/errorr.msg svneol=native#text/plain
-compiler/msg/errorrw.msg svneol=native#text/plain
+compiler/msg/errorru.msg svneol=native#text/plain
 compiler/msg/errorues.msg svneol=native#text/plain
 compiler/msgidx.inc svneol=native#text/plain
 compiler/msgtxt.inc svneol=native#text/plain
