+ support & to escape keywords being a solution for #14553
git-svn-id: trunk@13825 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9315,6 +9315,7 @@ tests/webtbs/tw1450.pp svneol=native#text/plain
 tests/webtbs/tw1451.pp svneol=native#text/plain
 tests/webtbs/tw14514.pp svneol=native#text/plain
 tests/webtbs/tw14536.pp svneol=native#text/plain
+tests/webtbs/tw14553.pp svneol=native#text/pascal
 tests/webtbs/tw1470.pp svneol=native#text/plain
 tests/webtbs/tw1472.pp svneol=native#text/plain
 tests/webtbs/tw1477.pp svneol=native#text/plain
