* allow reintroduce for objects, resolves #14743
git-svn-id: trunk@13832 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9320,6 +9320,7 @@ tests/webtbs/tw14617.pp svneol=native#text/plain
 tests/webtbs/tw1470.pp svneol=native#text/plain
 tests/webtbs/tw1472.pp svneol=native#text/plain
 tests/webtbs/tw14740.pp svneol=native#text/plain
+tests/webtbs/tw14743.pp svneol=native#text/pascal
 tests/webtbs/tw1477.pp svneol=native#text/plain
 tests/webtbs/tw1479.pp svneol=native#text/plain
 tests/webtbs/tw1485.pp svneol=native#text/plain
