* fixed mantis #14729:     o add accessibility info for fields and methods (public/protected/private)     o write method type info for methods not implemented in the current module       (for tf_dwarf_only_local_labels systems)
git-svn-id: trunk@13833 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9319,6 +9319,7 @@ tests/webtbs/tw14553.pp svneol=native#text/pascal
 tests/webtbs/tw14617.pp svneol=native#text/plain
 tests/webtbs/tw1470.pp svneol=native#text/plain
 tests/webtbs/tw1472.pp svneol=native#text/plain
+tests/webtbs/tw14729.pp svneol=native#text/plain
 tests/webtbs/tw14740.pp svneol=native#text/plain
 tests/webtbs/tw14743.pp svneol=native#text/pascal
 tests/webtbs/tw1477.pp svneol=native#text/plain
