tests: add more tests for sealed/abstract classes
git-svn-id: branches/paul/features@13893 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8399,6 +8399,8 @@ tests/test/trtti4.pp svneol=native#text/plain
 tests/test/trtti5.pp svneol=native#text/plain
 tests/test/tsealed1.pp svneol=native#text/pascal
 tests/test/tsealed2.pp svneol=native#text/pascal
+tests/test/tsealed3.pp svneol=native#text/pascal
+tests/test/tsealed4.pp svneol=native#text/pascal
 tests/test/tsel1.pp svneol=native#text/plain
 tests/test/tsel2.pp svneol=native#text/plain
 tests/test/tset1.pp svneol=native#text/plain
