* merged sealed and abstract support by Paul Ishenin -- Zusammenführen von r13884 in ».«: U    compiler/msgtxt.inc U    compiler/msgidx.inc U    compiler/pdecsub.pas U    compiler/pdecobj.pas U    compiler/tokens.pas U    compiler/ppu.pas U    compiler/symconst.pas U    compiler/msg/errore.msg U    compiler/utils/ppudump.pp -- Zusammenführen von r13885 in ».«: A    tests/test/tsealed1.pp A    tests/test/tabstract1.pp A    tests/test/tsealed2.pp -- Zusammenführen von r13893 in ».«: A    tests/test/tsealed3.pp A    tests/test/tsealed4.pp
git-svn-id: trunk@13908 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8087,6 +8087,7 @@ tests/test/packages/win-base/tdispvar1.pp svneol=native#text/plain
 tests/test/packages/zlib/tzlib1.pp svneol=native#text/plain
 tests/test/t4cc1.pp svneol=native#text/plain
 tests/test/t4cc2.pp svneol=native#text/plain
+tests/test/tabstract1.pp svneol=native#text/pascal
 tests/test/tabstrcl.pp svneol=native#text/plain
 tests/test/tabsvr1.pp svneol=native#text/plain
 tests/test/tabsvr2.pp svneol=native#text/plain
@@ -8397,6 +8398,10 @@ tests/test/trtti2.pp svneol=native#text/plain
 tests/test/trtti3.pp svneol=native#text/plain
 tests/test/trtti4.pp svneol=native#text/plain
 tests/test/trtti5.pp svneol=native#text/plain
+tests/test/tsealed1.pp svneol=native#text/pascal
+tests/test/tsealed2.pp svneol=native#text/pascal
+tests/test/tsealed3.pp svneol=native#text/pascal
+tests/test/tsealed4.pp svneol=native#text/pascal
 tests/test/tsel1.pp svneol=native#text/plain
 tests/test/tsel2.pp svneol=native#text/plain
 tests/test/tset1.pp svneol=native#text/plain
