* allowed open "packed" arrays (same as regular open arrays, for     compatibility with some other Pascal compilers) (mantis #14812)
git-svn-id: trunk@13918 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9333,6 +9333,7 @@ tests/webtbs/tw14740.pp svneol=native#text/plain
 tests/webtbs/tw14743.pp svneol=native#text/pascal
 tests/webtbs/tw1477.pp svneol=native#text/plain
 tests/webtbs/tw1479.pp svneol=native#text/plain
+tests/webtbs/tw14812.pp svneol=native#text/plain
 tests/webtbs/tw1485.pp svneol=native#text/plain
 tests/webtbs/tw1489.pp svneol=native#text/plain
 tests/webtbs/tw1501.pp svneol=native#text/plain
