--- a/.gitattributes
+++ b/.gitattributes
@@ -8728,6 +8728,8 @@ tests/webtbf/tw1432.pp svneol=native#text/plain
 tests/webtbf/tw14650.pp svneol=native#text/plain
 tests/webtbf/tw14650a.pp svneol=native#text/plain
 tests/webtbf/tw1467.pp svneol=native#text/plain
+tests/webtbf/tw14713.pp svneol=native#text/plain
+tests/webtbf/tw14713a.pp svneol=native#text/plain
 tests/webtbf/tw1483.pp svneol=native#text/plain
 tests/webtbf/tw1599.pp svneol=native#text/plain
 tests/webtbf/tw1599b.pp svneol=native#text/plain
