--- a/.gitattributes
+++ b/.gitattributes
@@ -8216,6 +8216,7 @@ tests/test/tforin4.pp svneol=native#text/pascal
 tests/test/tforin5.pp svneol=native#text/pascal
 tests/test/tforin6.pp svneol=native#text/pascal
 tests/test/tforin7.pp svneol=native#text/pascal
+tests/test/tforin8.pp svneol=native#text/pascal
 tests/test/tfpu1.pp svneol=native#text/plain
 tests/test/tfpu2.pp svneol=native#text/plain
 tests/test/tfpu3.pp svneol=native#text/plain
