--- a/.gitattributes
+++ b/.gitattributes
@@ -8217,6 +8217,7 @@ tests/test/tforin5.pp svneol=native#text/pascal
 tests/test/tforin6.pp svneol=native#text/pascal
 tests/test/tforin7.pp svneol=native#text/pascal
 tests/test/tforin8.pp svneol=native#text/pascal
+tests/test/tforin9.pp svneol=native#text/pascal
 tests/test/tfpu1.pp svneol=native#text/plain
 tests/test/tfpu2.pp svneol=native#text/plain
 tests/test/tfpu3.pp svneol=native#text/plain
