* make strict string var checking ({$v+}) the default in TP and Delphi modes     (mantis #14929)
git-svn-id: trunk@13966 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8735,6 +8735,8 @@ tests/webtbf/tw14713.pp svneol=native#text/plain
 tests/webtbf/tw14713a.pp svneol=native#text/plain
 tests/webtbf/tw1483.pp svneol=native#text/plain
 tests/webtbf/tw14849.pp svneol=native#text/plain
+tests/webtbf/tw14929a.pp svneol=native#text/plain
+tests/webtbf/tw14929b.pp svneol=native#text/plain
 tests/webtbf/tw1599.pp svneol=native#text/plain
 tests/webtbf/tw1599b.pp svneol=native#text/plain
 tests/webtbf/tw1633.pp svneol=native#text/plain
