* added some new functions to zorba headers * added an example
git-svn-id: trunk@13993 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -5416,6 +5416,8 @@ packages/zlib/src/zlib.pp svneol=native#text/plain
 packages/zorba/Makefile svneol=native#text/plain
 packages/zorba/Makefile.fpc svneol=native#text/plain
 packages/zorba/Package.fpc svneol=native#text/plain
+packages/zorba/examples/simple/simple.lpi svneol=native#text/plain
+packages/zorba/examples/simple/simple.lpr svneol=native#text/plain
 packages/zorba/fpmake.pp svneol=native#text/plain
 packages/zorba/src/zorba.inc svneol=native#text/plain
 packages/zorba/src/zorba.pas svneol=native#text/plain
