--- a/.gitattributes
+++ b/.gitattributes
@@ -8750,6 +8750,8 @@ tests/webtbf/tw14650a.pp svneol=native#text/plain
 tests/webtbf/tw1467.pp svneol=native#text/plain
 tests/webtbf/tw14713.pp svneol=native#text/plain
 tests/webtbf/tw14713a.pp svneol=native#text/plain
+tests/webtbf/tw14777.pp svneol=native#text/plain
+tests/webtbf/tw14777a.pp svneol=native#text/plain
 tests/webtbf/tw1483.pp svneol=native#text/plain
 tests/webtbf/tw14849.pp svneol=native#text/plain
 tests/webtbf/tw14929a.pp svneol=native#text/plain
