+ enhanced clone of GNU rm, helper for building GO32v2 releases under WinXP, but possibly useful in some other cases too
git-svn-id: trunk@14007 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -10525,6 +10525,8 @@ utils/ppdep.pp svneol=native#text/plain
 utils/ptop.pp svneol=native#text/plain
 utils/ptopu.pp svneol=native#text/plain
 utils/rmcvsdir.pp svneol=native#text/plain
+utils/rmwait/Makefile.fpc svneol=native#text/plain
+utils/rmwait/rmwait.pas svneol=native#text/plain
 utils/rstconv.pp svneol=native#text/plain
 utils/sim_pasc/Answers svneol=native#text/plain
 utils/sim_pasc/ChangeLog svneol=native#text/plain
