compiler:   - fix for-in loop for string const array   - add some test from Alexander S. Klenin (issue #0014990)
git-svn-id: trunk@14041 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8229,6 +8229,12 @@ tests/test/tfinal2.pp svneol=native#text/pascal
 tests/test/tforin1.pp svneol=native#text/pascal
 tests/test/tforin10.pp svneol=native#text/plain
 tests/test/tforin11.pp svneol=native#text/plain
+tests/test/tforin12.pp svneol=native#text/pascal
+tests/test/tforin13.pp svneol=native#text/pascal
+tests/test/tforin14.pp svneol=native#text/pascal
+tests/test/tforin15.pp svneol=native#text/pascal
+tests/test/tforin16.pp svneol=native#text/pascal
+tests/test/tforin17.pp svneol=native#text/pascal
 tests/test/tforin2.pp svneol=native#text/pascal
 tests/test/tforin3.pp svneol=native#text/pascal
 tests/test/tforin4.pp svneol=native#text/pascal
