compiler:   - fix for-in loop for empty sets   - add some test from Alexander S. Klenin (issue #0014990)
git-svn-id: trunk@14042 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8235,6 +8235,8 @@ tests/test/tforin14.pp svneol=native#text/pascal
 tests/test/tforin15.pp svneol=native#text/pascal
 tests/test/tforin16.pp svneol=native#text/pascal
 tests/test/tforin17.pp svneol=native#text/pascal
+tests/test/tforin18.pp svneol=native#text/pascal
+tests/test/tforin19.pp svneol=native#text/pascal
 tests/test/tforin2.pp svneol=native#text/pascal
 tests/test/tforin3.pp svneol=native#text/pascal
 tests/test/tforin4.pp svneol=native#text/pascal
