compiler:   - don't allow operator enumerator with non object/class/interface result type   - add some test from Alexander S. Klenin (issue #0014990)
git-svn-id: trunk@14043 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8238,6 +8238,8 @@ tests/test/tforin17.pp svneol=native#text/pascal
 tests/test/tforin18.pp svneol=native#text/pascal
 tests/test/tforin19.pp svneol=native#text/pascal
 tests/test/tforin2.pp svneol=native#text/pascal
+tests/test/tforin20.pp svneol=native#text/pascal
+tests/test/tforin21.pp svneol=native#text/pascal
 tests/test/tforin3.pp svneol=native#text/pascal
 tests/test/tforin4.pp svneol=native#text/pascal
 tests/test/tforin5.pp svneol=native#text/pascal
