compiler:   - don't find MoveNext functions with the required arguments   - add some test from Alexander S. Klenin (issue #0014990)
git-svn-id: trunk@14044 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8240,6 +8240,7 @@ tests/test/tforin19.pp svneol=native#text/pascal
 tests/test/tforin2.pp svneol=native#text/pascal
 tests/test/tforin20.pp svneol=native#text/pascal
 tests/test/tforin21.pp svneol=native#text/pascal
+tests/test/tforin22.pp svneol=native#text/pascal
 tests/test/tforin3.pp svneol=native#text/pascal
 tests/test/tforin4.pp svneol=native#text/pascal
 tests/test/tforin5.pp svneol=native#text/pascal
