* fuse package + 1 test, Mantis 12218
git-svn-id: trunk@14117 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -2233,6 +2233,11 @@ packages/fpvectorial/src/pdfvectorialreader.pas svneol=native#text/plain
 packages/fpvectorial/src/pdfvrlexico.pas svneol=native#text/plain
 packages/fpvectorial/src/pdfvrsemantico.pas svneol=native#text/plain
 packages/fpvectorial/src/pdfvrsintatico.pas svneol=native#text/plain
+packages/fuse/Makefile svneol=native#text/plain
+packages/fuse/Makefile.fpc svneol=native#text/plain
+packages/fuse/fpmake.pp svneol=native#text/plain
+packages/fuse/src/fuse.pas svneol=native#text/plain
+packages/fuse/tests/fusetest.pp svneol=native#text/plain
 packages/fv/Makefile svneol=native#text/plain
 packages/fv/Makefile.fpc svneol=native#text/plain
 packages/fv/examples/Makefile svneol=native#text/plain
