--- a/.gitattributes
+++ b/.gitattributes
@@ -7055,7 +7055,7 @@ rtl/solaris/errno.inc svneol=native#text/plain
 rtl/solaris/errnostr.inc svneol=native#text/plain
 rtl/solaris/i386/sighnd.inc svneol=native#text/plain
 rtl/solaris/i386/sighndh.inc svneol=native#text/plain
-rtl/solaris/i386/start.inc -text svneol=unset#text/plain
+rtl/solaris/i386/start.inc svneol=native#text/plain
 rtl/solaris/osdefs.inc svneol=native#text/plain
 rtl/solaris/osmacro.inc svneol=native#text/plain
 rtl/solaris/ostypes.inc svneol=native#text/plain
