--- a/.gitattributes
+++ b/.gitattributes
@@ -8862,6 +8862,7 @@ tests/test/tgeneric14.pp svneol=native#text/plain
 tests/test/tgeneric15.pp svneol=native#text/plain
 tests/test/tgeneric16.pp svneol=native#text/plain
 tests/test/tgeneric17.pp svneol=native#text/plain
+tests/test/tgeneric18.pp svneol=native#text/pascal
 tests/test/tgeneric2.pp svneol=native#text/plain
 tests/test/tgeneric3.pp svneol=native#text/plain
 tests/test/tgeneric4.pp svneol=native#text/plain
